working on new dataset creation method

--- a/dataset_creation.ipynb
+++ b/dataset_creation.ipynb
@@ -19,6 +19,7 @@
     "\n",
     "from scipy import signal\n",
     "import audiosegment\n",
+    "from pydub import AudioSegment as AS\n",
     "import librosa\n",
     "\n",
     "from tqdm import tqdm\n",
@@ -230,7 +231,7 @@
     "    return logspec\n",
     "\n",
     "# reformats midi array for training\n",
-    "def reformat_midi_for_training(midi_array):\n",
+    "def reformat_midi(midi_array):\n",
     "    midi_array = midi_array.T # transpose midi array for easy access\n",
     "    T_steps = midi_array.shape[1] # get number of time steps\n",
     "    # kicks\n",
@@ -289,7 +290,6 @@
     "    reformated_midi_array[:,TOM_2] = tom2_midi\n",
     "    reformated_midi_array[:,TOM_3] = tom3_midi\n",
     "    reformated_midi_array[:,CRASH] = crash_midi\n",
-    "    \n",
     "    return reformated_midi_array\n",
     "\n",
     "# shrinks an array down keeping the distance between values proportional\n",
@@ -319,6 +319,62 @@
     "            midi_arrays.append(split_midi_arrays[i])\n",
     "    return midi_arrays\n",
     "\n",
+    "# removes rows from midi_array if they are all 0\n",
+    "def cut_leading_ending_zeros(midi_array):\n",
+    "    # delete leading zeros\n",
+    "    leading_zeros = 0\n",
+    "    example = np.zeros(NUM_FEATS, dtype='int32')\n",
+    "    for t in range(midi_array.shape[0]):\n",
+    "        row = np.array(midi_array[t,:], dtype='int32')\n",
+    "        if np.array_equal(row, example):\n",
+    "            leading_zeros += 1\n",
+    "        else:\n",
+    "            break\n",
+    "    if leading_zeros > 0:\n",
+    "        midi_array = np.delete(midi_array, np.s_[0:leading_zeros], axis=0)\n",
+    "    # delete ending zeros\n",
+    "    ending_zeros = 0\n",
+    "    for t in range(midi_array.shape[0]-1, -1, -1):\n",
+    "        row = np.array(midi_array[t,:], dtype='int32')\n",
+    "        if np.array_equal(row, example):\n",
+    "            ending_zeros += 1\n",
+    "        else:\n",
+    "            break\n",
+    "    print('ending zeros: ', ending_zeros, ' shape b4: ', midi_array.shape)\n",
+    "    if ending_zeros > 0:\n",
+    "        midi_array = midi_array[:-ending_zeros]\n",
+    "    print('ending zeros: ', ending_zeros, ' shape after: ', midi_array.shape)\n",
+    "    return midi_array, leading_zeros, ending_zeros\n",
+    "\n",
+    "# slice midi based on ticks per seg (x ticks = 1 segment index)\n",
+    "def slice_midi(midi_array, ticks_per_seg):\n",
+    "    # get midi segments\n",
+    "    midi_segments = []\n",
+    "    for t in range(0, midi_array.shape[0], ticks_per_seg):\n",
+    "        segment = np.zeros(NUM_FEATS, dtype='int32')\n",
+    "        for inst in range(NUM_FEATS):\n",
+    "            sum = 0\n",
+    "            for i in range(ticks_per_seg):\n",
+    "                if (t+i < midi_array.shape[0]):\n",
+    "                    sum += midi_array[t+i][inst]\n",
+    "            sum /= ticks_per_seg\n",
+    "            if (sum >= 0.5):\n",
+    "                segment[inst] = 1\n",
+    "        midi_segments.append(segment)\n",
+    "    midi_segments = np.array(midi_segments, dtype='int64')\n",
+    "    return midi_segments\n",
+    "\n",
+    "def remove_leading_silence(wav_array):\n",
+    "    leading_silence = 0\n",
+    "    for t in range(len(wav_array)):\n",
+    "        if wav_array[t] == 0 or wav_array[t] == -1 or wav_array[t] == 1:\n",
+    "            leading_silence += 1\n",
+    "        else:\n",
+    "            break\n",
+    "    if leading_silence > 0:\n",
+    "        wav_array = wav_array[leading_silence:]\n",
+    "    return wav_array\n",
+    "        \n",
     "def show_midi_plot(midi_array):\n",
     "    midi_array = np.flip(midi_array.T, axis=0)\n",
     "    f = plot.figure()\n",
@@ -346,7 +402,72 @@
     "    plot.imshow(midi_array, 'binary', interpolation='None', alpha=0.5, aspect=\"auto\")\n",
     "    plot.show()\n",
     "\n",
+    "def get_data_segs(data_index, audio_data_per_seg, mel_spec_num):\n",
+    "    # load in midi file\n",
+    "    midi_file_path = \"data/groove/\" + data_index.midi_filename\n",
+    "    midi = mido.MidiFile(midi_file_path)\n",
+    "    # convert midi to array\n",
+    "    midi_array = mid2array(midi)\n",
+    "    calculated_length = mido.tick2second(midi_array.shape[0], ticks_per_beat=midi.ticks_per_beat, tempo=mido.bpm2tempo(data_index.bpm))\n",
+    "    # reformat midi array for training\n",
+    "    midi_array = reformat_midi(midi_array)\n",
+    "    # show_midi_plot(midi_array)\n",
+    "    #print (\"reformated midi_array.shape: \", midi_array.shape)\n",
+    "    # cut leading zeros\n",
+    "    midi_array, leading_zeros, ending_zeros = cut_leading_ending_zeros(midi_array)\n",
+    "    leading_removed = mido.tick2second(leading_zeros, ticks_per_beat=midi.ticks_per_beat, tempo=mido.bpm2tempo(data_index.bpm))\n",
+    "    ending_removed = mido.tick2second(ending_zeros, ticks_per_beat=midi.ticks_per_beat, tempo=mido.bpm2tempo(data_index.bpm))\n",
+    "    new_midi_duration = mido.tick2second(midi_array.shape[0], ticks_per_beat=midi.ticks_per_beat, tempo=mido.bpm2tempo(data_index.bpm))\n",
+    "    print ('starting length: ', midi.length)\n",
+    "    print ('calculated starting length: ', calculated_length)\n",
+    "    print ('leading removed: ', leading_removed)\n",
+    "    print ('ending removed: ', ending_removed)\n",
+    "    print ('new_midi duration: ', new_midi_duration)\n",
+    "    #show_midi_plot(midi_array)\n",
+    "    print (\"removed starting zeros midi_array.shape: \", midi_array.shape)\n",
+    "    ticks_per_beat = midi.ticks_per_beat\n",
+    "    ticks_per_16th = int(ticks_per_beat / 16)\n",
+    "    print ('ticks_per_16th', ticks_per_16th)\n",
+    "    midi_segments = slice_midi(midi_array, ticks_per_16th)\n",
+    "    print ('len(midi_segments): ', len(midi_segments))\n",
+    "    #print ('midi_segments: ', midi_segments)\n",
+    "    #show_midi_plot(midi_segments)\n",
     "\n",
+    "\n",
+    "    # load in wav file\n",
+    "    audio_file_path = \"data/groove/\" + data_index.audio_filename\n",
+    "    wav_file = audiosegment.from_file(audio_file_path)\n",
+    "    print ('wav file duration: ', wav_file.duration_seconds)\n",
+    "    # convert sample width if not set to 2 (16 bits)\n",
+    "    if wav_file.sample_width != 2:\n",
+    "        wav_file = wav_file.set_sample_width(2)\n",
+    "        # print(\"\\tnew sample_width: \", wav_file.sample_width)\n",
+    "        wav_file.export(audio_file_path, format=\"wav\")\n",
+    "    # convert file from stereo to mono if channels > 1\n",
+    "    if wav_file.channels != 1:\n",
+    "        wav_file = wav_file.set_channels(1)\n",
+    "        wav_file.export(audio_file_path, format=\"wav\")\n",
+    "    # remove starting silence from wav file\n",
+    "    wav_array = wav_file.to_numpy_array()\n",
+    "    wav_array = remove_leading_silence(wav_array)\n",
+    "    wav_file = audiosegment.from_numpy_array(wav_array, framerate=wav_file.frame_rate)\n",
+    "    print ('new wav file duration: ', wav_file.duration_seconds)\n",
+    "    # cut wavfile to be same length in seconds as midi\n",
+    "    if wav_file.duration_seconds > new_midi_duration:\n",
+    "        resized_wav_file = wav_file.dice(new_midi_duration, zero_pad=False)\n",
+    "    wav_file = resized_wav_file[0]\n",
+    "    print ('resized wav file duration: ', wav_file.duration_seconds)\n",
+    "    segment_duration = wav_file.duration_seconds / len(midi_segments)\n",
+    "    print ('segment_duration: ', segment_duration)\n",
+    "    diced_wav_file = wav_file.dice(segment_duration, zero_pad=False)\n",
+    "    while len(diced_wav_file) > len(midi_segments):\n",
+    "        diced_wav_file.pop()\n",
+    "    print ('diced len: ', len(diced_wav_file))\n",
+    "    \n",
+    "    \n",
+    "    dummy_feats = []\n",
+    "    return dummy_feats, midi_segments\n",
+    "    \n",
     "def index_to_arrays(csv_index, segment_length, window_size, window_stride):\n",
     "    # load in wav file\n",
     "    audio_file_path = \"data/groove/\" + csv_index.audio_filename\n",
@@ -398,7 +519,7 @@
     "    #show_midi_plot(midi_array)\n",
     "    \n",
     "    # reformat midi array for training\n",
-    "    midi_array = reformat_midi_for_training(midi_array)\n",
+    "    midi_array = reformat_midi(midi_array)\n",
     "    #show_midi_plot(midi_array)\n",
     "    #print (\"reformated midi_array.shape: \", midi_array.shape)\n",
     "    \n",
@@ -431,6 +552,89 @@
     "    #print (\"labels: \", labels_list.shape)\n",
     "    \n",
     "    return feats_list , labels_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:00<00:00, 17.24it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0  file:  drummer1/session1/103_funk_95_fill_4-4.wav   2.134207  sec\n",
+      "ending zeros:  659  shape b4:  (2232, 9)\n",
+      "ending zeros:  659  shape after:  (1573, 9)\n",
+      "starting length:  3.0013112874999996\n",
+      "calculated starting length:  3.0013160395833336\n",
+      "leading removed:  0.06447368958333334\n",
+      "ending removed:  0.8671053354166667\n",
+      "new_midi duration:  2.0697370145833336\n",
+      "removed starting zeros midi_array.shape:  (1573, 9)\n",
+      "ticks_per_16th 30\n",
+      "len(midi_segments):  53\n",
+      "wav file duration:  2.5263038548752834\n",
+      "new wav file duration:  2.4646938775510203\n",
+      "resized wav file duration:  2.0697278911564627\n",
+      "segment_duration:  0.03905146964446156\n",
+      "diced len:  53\n",
+      "train_feats.shape:  (0,)\n",
+      "train_labels.shape:  (53, 9)\n",
+      "time elapsed:  0.06  sec\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# {dev only}\n",
+    "\n",
+    "DEV_MODE = True\n",
+    "AUDIO_DATA_PER_SEG = 32\n",
+    "MEL_SPEC_NUM = 128\n",
+    "\n",
+    "if DEV_MODE:\n",
+    "    # get complete list of train feats / labels\n",
+    "    \n",
+    "    dev_csv = []\n",
+    "    dev_csv.append(train_csv[5])\n",
+    "    \n",
+    "    \n",
+    "    startTime = time.time()\n",
+    "    feats = []\n",
+    "    labels = []\n",
+    "\n",
+    "    for i, index in enumerate(tqdm(dev_csv)):\n",
+    "        print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
+    "        feats, labels = get_data_segs(index, AUDIO_DATA_PER_SEG, MEL_SPEC_NUM)\n",
+    "        for j in range(len(feats)):\n",
+    "            # print (\"\\t\", j, \" feats: \", feats[j].shape, \" labels: \", labels[j].shape)\n",
+    "            # show_midi_plot(labels[j])\n",
+    "            # show_spectrograph(feats[j])\n",
+    "            # show_midi_over_spec(feats[j], labels[j])\n",
+    "            feats.append(feats[j])\n",
+    "            labels.append(labels[j])\n",
+    "    # make into numpy arrays\n",
+    "    feats = np.array(feats, dtype='float64')\n",
+    "    labels = np.array(labels, dtype='int64')\n",
+    "    print (\"train_feats.shape: \", feats.shape)\n",
+    "    print (\"train_labels.shape: \", labels.shape)\n",
+    "    # dataset complete\n",
+    "    print (\"time elapsed: \", round((time.time() - startTime), 2), \" sec\\n\")"
    ]
   },
   {
