--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -11,7 +11,7 @@
     "import os\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import (Dense, LSTM)\n",
+    "from tensorflow.keras.layers import (Dense, LSTM, ConvLSTM2D, Flatten)\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -47,7 +47,7 @@
       "Num GPUs Available:  1\n",
       "| ID | GPU | MEM |\n",
       "------------------\n",
-      "|  0 |  6% | 12% |\n"
+      "|  0 |  3% | 13% |\n"
      ]
     }
    ],
@@ -91,8 +91,11 @@
     "\n",
     "def my_model(num_hidden):\n",
     "  model = tf.keras.Sequential()\n",
-    "  model.add(Dense(128, activation='relu'))\n",
-    "  model.add(LSTM(units=num_hidden, activation='tanh', input_shape=(1, 128)))\n",
+    "  model.add(ConvLSTM2D(filters=num_hidden, kernel_size=(5,5), strides=(1,1)))\n",
+    "  model.add(Flatten())\n",
+    "  # model.add(Con(128, activation='relu'))\n",
+    "  #model.add(LSTM(units=num_hidden, activation='tanh', input_shape=(10, 128)))\n",
+    "  model.add(Dense(256, activation='relu'))\n",
     "  model.add(Dense(64, activation='relu'))\n",
     "  model.add(Dense(9, activation='sigmoid', name='output'))\n",
     "  return model\n"
@@ -162,17 +165,19 @@
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense (Dense)               (None, 1, 128)            16512     \n",
+      " conv_lstm2d (ConvLSTM2D)    (None, 6, 124, 128)       1651712   \n",
       "                                                                 \n",
-      " lstm (LSTM)                 (None, 128)               131584    \n",
+      " flatten (Flatten)           (None, 95232)             0         \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 64)                8256      \n",
+      " dense (Dense)               (None, 256)               24379648  \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 64)                16448     \n",
       "                                                                 \n",
       " output (Dense)              (None, 9)                 585       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 156,937\n",
-      "Trainable params: 156,937\n",
+      "Total params: 26,048,393\n",
+      "Trainable params: 26,048,393\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -181,8 +186,9 @@
    "source": [
     "# create new model\n",
     "HIDDEN_DIM = 128\n",
-    "LR = 0.00001\n",
-    "INPUT_SHAPE = (None, 1, 128)\n",
+    "LR = 0.001\n",
+    "WINDOW_LEN = 10\n",
+    "INPUT_SHAPE = (None, 1, WINDOW_LEN, 128, 1)\n",
     "\n",
     "model = my_model(HIDDEN_DIM)\n",
     "model.compile(\n",
@@ -197,7 +203,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mappings for our own training (9)\n",
+    "KICK = 0\n",
+    "SNARE = 1\n",
+    "HH_CLOSED = 2\n",
+    "HH_OPEN = 3\n",
+    "RIDE = 4\n",
+    "TOM_1 = 5\n",
+    "TOM_2 = 6\n",
+    "TOM_3 = 7\n",
+    "CRASH = 8\n",
+    "NUM_FEATS = 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,25 +231,15 @@
      "text": [
       "feats.shape:  (6522, 100, 128)\n",
       "labels.shape:  (6522, 100, 9)\n",
-      "new_0:  65220  rem:  0\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 65220 is out of bounds for axis 0 with size 65220",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [21], line 28\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[39mfor\u001b[39;00m t \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(train_labels_npy\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m] \u001b[39m-\u001b[39m \u001b[39m1\u001b[39m):\n\u001b[0;32m     27\u001b[0m     \u001b[39mif\u001b[39;00m t \u001b[39m%\u001b[39m \u001b[39m2\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m---> 28\u001b[0m         new_labels[i] \u001b[39m=\u001b[39m train_labels_npy[t] \u001b[39m+\u001b[39m train_labels_npy[t\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[0;32m     29\u001b[0m         i \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m     30\u001b[0m train_labels_npy \u001b[39m=\u001b[39m new_labels\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 65220 is out of bounds for axis 0 with size 65220"
+      "new_0:  65220  rem:  0\n",
+      "reshaped-dataset.shape:  (65220, 1, 10, 128, 1)\n",
+      "reshaped-dataset.shape:  (65220, 9)\n"
      ]
     }
    ],
    "source": [
     "\n",
     "DATA_ID = '_5s_20hz'\n",
-    "WINDOW_LEN = 10\n",
     "dataset_feats_path = \"data/dataset\" + DATA_ID + \"/\" + \"train_feats\" + DATA_ID + \".npy\"\n",
     "dataset_labels_path = \"data/dataset\" + DATA_ID + \"/\" + \"train_labels\" + DATA_ID + \".npy\"\n",
     "\n",
@@ -239,17 +254,27 @@
     "    train_feats_npy = train_feats_npy.reshape(train_feats_npy.shape[0]*train_feats_npy.shape[1], train_feats_npy.shape[2])\n",
     "    train_labels_npy = train_labels_npy.reshape(train_labels_npy.shape[0]*train_labels_npy.shape[1], train_labels_npy.shape[2])\n",
     "    \n",
-    "    new_0 = int(train_feats_npy.shape[0]/WINDOW_LEN)\n",
+    "    new_0 = int(train_feats_npy.shape[0] / WINDOW_LEN)\n",
     "    rem = train_feats_npy.shape[0] - (new_0 * WINDOW_LEN)\n",
     "    \n",
     "    print ('new_0: ', new_0, ' rem: ', rem)\n",
-    "    train_feats_npy = train_feats_npy.reshape(new_0, WINDOW_LEN, 128)\n",
+    "    train_feats_npy = train_feats_npy.reshape(new_0, 1, WINDOW_LEN, 128, 1)\n",
+    "    train_labels_npy = train_labels_npy.reshape(new_0, WINDOW_LEN, 9)\n",
     "    \n",
-    "    temp_labels = np.zeros(new_0, 9)\n",
-    "    for i in range(train_labels_npy.shape[0]):\n",
-    "        for t in range(train_labels_npy.shape[1]):\n",
-    "            pass #TODO reshape labels array\n",
-    "    \n",
+    "    reshaped_train_labels = np.zeros(shape=(new_0, 9))\n",
+    "    for index in range(train_labels_npy.shape[0]):\n",
+    "        for t in range(WINDOW_LEN):\n",
+    "            reshaped_train_labels[index][KICK] += train_labels_npy[index][t][KICK]\n",
+    "            reshaped_train_labels[index][SNARE] += train_labels_npy[index][t][SNARE]\n",
+    "            reshaped_train_labels[index][HH_CLOSED] += train_labels_npy[index][t][HH_CLOSED]\n",
+    "            reshaped_train_labels[index][HH_OPEN] += train_labels_npy[index][t][HH_OPEN]\n",
+    "            reshaped_train_labels[index][RIDE] += train_labels_npy[index][t][RIDE]\n",
+    "            reshaped_train_labels[index][TOM_1] += train_labels_npy[index][t][TOM_1]\n",
+    "            reshaped_train_labels[index][TOM_2] += train_labels_npy[index][t][TOM_2]\n",
+    "            reshaped_train_labels[index][TOM_3] += train_labels_npy[index][t][TOM_3]\n",
+    "            reshaped_train_labels[index][CRASH] += train_labels_npy[index][t][CRASH]\n",
+    "    reshaped_train_labels = reshaped_train_labels / WINDOW_LEN\n",
+    "    train_labels_npy = np.where(reshaped_train_labels > 0.5, 1, 0)\n",
     "    \n",
     "    # train_feats_npy = np.reshape(train_feats_npy, (train_feats_npy.shape[0], 1, train_feats_npy.shape[1]))\n",
     "    # train_labels_npy = np.reshape(train_labels_npy, (train_labels_npy.shape[0], 1, train_labels_npy.shape[1]))\n",
@@ -260,15 +285,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "2039/2039 [==============================] - 119s 56ms/step - loss: 0.9122 - macro_f1: 0.0878\n",
+      "Epoch 2/5\n",
+      "2039/2039 [==============================] - 111s 55ms/step - loss: 0.9123 - macro_f1: 0.0877\n",
+      "Epoch 3/5\n",
+      "2039/2039 [==============================] - 115s 56ms/step - loss: 0.9122 - macro_f1: 0.0878\n",
+      "Epoch 4/5\n",
+      "2039/2039 [==============================] - 109s 54ms/step - loss: 0.9123 - macro_f1: 0.0877\n",
+      "Epoch 5/5\n",
+      "2039/2039 [==============================] - 109s 53ms/step - loss: 0.9123 - macro_f1: 0.0877\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x132e3383940>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# train the network!\n",
-    "EPOCHS = 20\n",
-    "BATCH_SIZE = 16\n",
+    "EPOCHS = 5\n",
+    "BATCH_SIZE = 32\n",
     "\n",
     "model.fit(train_feats_npy, train_labels_npy, epochs=EPOCHS, batch_size=BATCH_SIZE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: models/test_model\\assets\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save model\n",
+    "\n",
+    "MODEL_ID = 'test_model'\n",
+    "model.save('models/' + MODEL_ID)"
    ]
   }
  ],
