--- a/dataset_creation.ipynb
+++ b/dataset_creation.ipynb
@@ -19,13 +19,7 @@
     "\n",
     "from scipy import signal\n",
     "import audiosegment\n",
-    "from pydub import AudioSegment as AS\n",
     "import librosa\n",
-    "\n",
-    "from librosa import load, power_to_db\n",
-    "from librosa.display import specshow\n",
-    "from librosa.feature import melspectrogram\n",
-    "\n",
     "from tqdm import tqdm\n",
     "\n",
     "import matplotlib.pyplot as plot"
@@ -196,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,10 +338,10 @@
     "            ending_zeros += 1\n",
     "        else:\n",
     "            break\n",
-    "    print('ending zeros: ', ending_zeros, ' shape b4: ', midi_array.shape)\n",
+    "    #print('ending zeros: ', ending_zeros, ' shape b4: ', midi_array.shape)\n",
     "    if ending_zeros > 0:\n",
     "        midi_array = midi_array[:-ending_zeros]\n",
-    "    print('ending zeros: ', ending_zeros, ' shape after: ', midi_array.shape)\n",
+    "    #print('ending zeros: ', ending_zeros, ' shape after: ', midi_array.shape)\n",
     "    return midi_array, leading_zeros, ending_zeros\n",
     "\n",
     "# slice midi based on ticks per seg (x ticks = 1 segment index)\n",
@@ -406,7 +400,7 @@
     "    plot.imshow(midi_array, 'binary', interpolation='None', alpha=0.5, aspect=\"auto\")\n",
     "    plot.show()\n",
     "\n",
-    "def get_data_segs(data_index, segment_length, window_length, overlap, print_out=False):\n",
+    "def get_data_segs(data_index, frames, segment_length, window_length, overlap, print_out=False):\n",
     "    # load in midi file\n",
     "    midi_file_path = \"data/groove/\" + data_index.midi_filename\n",
     "    midi = mido.MidiFile(midi_file_path)\n",
@@ -482,19 +476,27 @@
     "    \n",
     "    # apply mel filer to audio segments\n",
     "    formated_audio = []\n",
-    "    for seg in enumerate(diced_wav_file):\n",
+    "    for seg in diced_wav_file:\n",
     "        freqs, times, spec = seg.spectrogram(window_length_s=window_length, overlap=overlap)\n",
-    "        if print_out:\n",
-    "            freqs, times, specs = signal.spectrogram(seg.to_numpy_array())\n",
-    "            spec = 10 * np.log10(spec + 1e-9)\n",
-    "            plot.pcolormesh(times, freqs, spec)\n",
-    "            plot.xlabel(\"Time in Seconds\")\n",
-    "            plot.ylabel(\"Frequency in Hz\")\n",
-    "            plot.show()\n",
-    "            print ('freqs: ', len(freqs), ' times: ', len(times), ' amps: ', len(amps))\n",
+    "        # if print_out:\n",
+    "        #     freqs, times, spec = signal.spectrogram(seg.to_numpy_array())\n",
+    "        #     spec = 10 * np.log10(spec + 1e-9)\n",
+    "        #     plot.pcolormesh(times, freqs, spec)\n",
+    "        #     plot.xlabel(\"Time in Seconds\")\n",
+    "        #     plot.ylabel(\"Frequency in Hz\")\n",
+    "        #     plot.show()\n",
+    "        #     print ('freqs: ', len(freqs), ' times: ', len(times), ' amps: ', len(amps))\n",
     "        # print ('amps type: ', type(spec), ' amps shape: ', spec.shape)\n",
-    "        formated_audio.append(spec)\n",
+    "        normalized_data = (spec-np.min(spec))/(np.max(spec)-np.min(spec))\n",
+    "        formated_audio.append(normalized_data)\n",
     "    formated_audio_array = np.array(formated_audio, dtype='float32')\n",
+    "    \n",
+    "    # reshape into frames\n",
+    "    rem = formated_audio_array.shape[0] % frames\n",
+    "    if rem != 0:\n",
+    "        \n",
+    "        \n",
+    "    \n",
     "    if print_out:\n",
     "        print ('formated_audio_array.shape: ', formated_audio_array.shape)\n",
     "    return formated_audio_array, midi_segments\n",
@@ -593,6 +595,8 @@
    "source": [
     "# {dev only}\n",
     "\n",
+    "np.set_printoptions(suppress=True)\n",
+    "\n",
     "DEV_MODE = True\n",
     "SEGMENT_LEN = 0.05 # length of each segment in seconds\n",
     "WINDOW_LEN = SEGMENT_LEN / 32\n",
@@ -611,7 +615,7 @@
     "    feats_list = []\n",
     "    labels_list = []\n",
     "\n",
-    "    for i, index in enumerate(tqdm(train_csv)):\n",
+    "    for i, index in enumerate(tqdm(dev_csv)):\n",
     "        print ('\\n', i, \" file: \", index.audio_filename, \" \", index.duration, \"sec bpm: \", index.bpm)\n",
     "        feats, labels = get_data_segs(index, SEGMENT_LEN, WINDOW_LEN, OVERLAP, print_out=True)\n",
     "        for j in range(len(feats)):\n",
@@ -619,6 +623,8 @@
     "            # show_midi_plot(labels[j])\n",
     "            # show_spectrograph(feats[j])\n",
     "            # show_midi_over_spec(feats[j], labels[j])\n",
+    "            print ('feats: ', feats)\n",
+    "            print ('labels: ', labels)\n",
     "            feats_list.append(feats[j])\n",
     "            labels_list.append(labels[j])\n",
     "    # make into numpy arrays\n",
@@ -697,13 +703,14 @@
     "np.set_printoptions(threshold=sys.maxsize)\n",
     "\n",
     "# data id (used to make different datasets)\n",
-    "data_id = '_5s_20hz'\n",
+    "data_id = '_0.05seg_div32win_0.25ol'\n",
     "print (\"DATASET ID: \", data_id)\n",
     "\n",
     "# these values define the resolution of the data\n",
     "SEGMENT_LEN = 0.05 # length of each segment in seconds\n",
     "WINDOW_LEN = SEGMENT_LEN / 32\n",
     "OVERLAP = 0.25\n",
+    "FRAMES = 8\n",
     "\n",
     "# reset temp folder\n",
     "reset_temp_folder()\n",
@@ -720,9 +727,15 @@
     "train_feats = []\n",
     "train_labels = []\n",
     "\n",
+    "testy_csv = []\n",
+    "testy_csv.append(train_csv[0])\n",
+    "testy_csv.append(train_csv[1])\n",
+    "testy_csv.append(train_csv[2])\n",
+    "testy_csv.append(train_csv[3])\n",
+    "\n",
     "for i, index in enumerate(tqdm(train_csv)):\n",
     "    # print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
-    "    feats, labels = index_to_arrays(index, segment_length, window_size, window_stride)\n",
+    "    feats, labels = get_data_segs(index, FRAMES, SEGMENT_LEN, WINDOW_LEN, OVERLAP, print_out=False)\n",
     "    for j in range(len(feats)):\n",
     "        # print (\"\\t\", j, \" feats: \", feats[j].shape, \" labels: \", labels[j].shape)\n",
     "        # show_midi_plot(labels[j])\n",
@@ -731,8 +744,8 @@
     "        train_feats.append(feats[j])\n",
     "        train_labels.append(labels[j])\n",
     "# make into numpy arrays\n",
-    "train_feats = np.array(train_feats, dtype='float64')\n",
-    "train_labels = np.array(train_labels, dtype='int64')\n",
+    "train_feats = np.array(train_feats, dtype='float32')\n",
+    "train_labels = np.array(train_labels, dtype='int32')\n",
     "print (\"train_feats.shape: \", train_feats.shape)\n",
     "print (\"train_labels.shape: \", train_labels.shape)\n",
     "# dataset complete\n",
@@ -758,14 +771,14 @@
     "test_labels = []\n",
     "for i, index in enumerate(tqdm(test_csv)):\n",
     "    #print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
-    "    feats, labels = index_to_arrays(index, segment_length, window_size, window_stride)\n",
+    "    feats, labels = get_data_segs(index, SEGMENT_LEN, WINDOW_LEN, OVERLAP, print_out=False)\n",
     "    for j in range(len(feats)):\n",
     "        # show_midi_over_spec(feats[j], labels[j])\n",
     "        test_feats.append(feats[j])\n",
     "        test_labels.append(labels[j])\n",
     "# make into numpy arrays\n",
-    "test_feats = np.array(test_feats, dtype='float64')\n",
-    "test_labels = np.array(test_labels, dtype='int64')\n",
+    "test_feats = np.array(test_feats, dtype='float32')\n",
+    "test_labels = np.array(test_labels, dtype='int32')\n",
     "print (\"test_feats.shape: \", test_feats.shape)\n",
     "print (\"test_labels.shape: \", test_labels.shape)\n",
     "# dataset complete\n",
@@ -788,14 +801,14 @@
     "val_labels = []\n",
     "for i, index in enumerate(tqdm(validation_csv)):\n",
     "    #print (i, \" file: \", index.audio_filename, \" \", index.duration, \" sec\")\n",
-    "    feats, labels = index_to_arrays(index, segment_length, window_size, window_stride)\n",
+    "    feats, labels = get_data_segs(index, SEGMENT_LEN, WINDOW_LEN, OVERLAP, print_out=False)\n",
     "    for j in range(len(feats)):\n",
     "        # show_midi_over_spec(feats[j], labels[j])\n",
     "        val_feats.append(feats[j])\n",
     "        val_labels.append(labels[j])\n",
     "# make into numpy arrays\n",
-    "val_feats = np.array(val_feats, dtype='float64')\n",
-    "val_labels = np.array(val_labels, dtype='int64')\n",
+    "val_feats = np.array(val_feats, dtype='float32')\n",
+    "val_labels = np.array(val_labels, dtype='int32')\n",
     "print (\"val_feats.shape: \", val_feats.shape)\n",
     "print (\"val_labels.shape: \", val_labels.shape)\n",
     "# dataset complete\n",
